# wukong-safewrite

./: .gitignore  CMakeLists.txt  package_macos.sh
src/: MainWindow.cpp  MainWindow.h
src/Auth/: LicenseGenerator.cpp  LicenseManager.cpp  LoginDialog.cpp
src/Calculation/: FreightCalculator.cpp  FreightCalculator.h  RuleManager.cpp  RuleManager.h  SimdCalculator.cpp  SimdCalculator.h
src/Excel/: ExcelEngine.cpp
src/UI/: ChartDialog.cpp  ChartWidgets.cpp  CustomerDialog.cpp
src/Utils/: ConfigManager.cpp  Logger.cpp  Logger.h  ProvinceUtils.cpp
tests/: CMakeLists.txt  test_real_data.cpp
tools/LicenseGenerator/: main.cpp
